--- a/package.json
+++ b/package.json
@@ -17,5 +17,9 @@
     "os-browserify": "^0.3.0",
     "parcel": "latest",
     "path-browserify": "^1.0.1"
+  },
+  "dependencies": {
+    "core-js": "^3.24.1",
+    "regenerator-runtime": "^0.13.9"
   }
 }
