--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "core-js": "^3.24.1",
     "fractional": "^1.0.0",
+    "num2fraction": "^1.2.2",
     "regenerator-runtime": "^0.13.9"
   }
 }
